# Labelizer

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/display/: mod.rs
src-tauri/src/file/: mod.rs
src/lib/: ChooseFolder.svelte  Display.svelte  DisplayCanvas.svelte  DisplayImages.svelte  DrawRectangles.svelte  GoToHome.svelte  Greet.svelte  ImageDisplay.svelte  SaveRectangles.svelte  dataStore.ts  imageStore.ts  rectangleDrawer.ts  rectangleSave.ts
src/routes/: +layout.ts  +page.svelte
src/routes/display/: +page.svelte
src/routes/home/: +page.svelte
