[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Tijoxa"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.71"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }
native-dialog = "0.6.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
